[gd_scene load_steps=12 format=3 uid="uid://jbkbt1h6gqsx"]

[ext_resource type="Script" path="res://src/singletons/camera/camera.gd" id="1_8vlcf"]
[ext_resource type="Resource" uid="uid://1jerxlyauuto" path="res://src/singletons/thumbstick_processor/thumbstick_resource_right.tres" id="2_yl0p3"]
[ext_resource type="Resource" uid="uid://bbaupgv7alorj" path="res://src/singletons/settings_manager/settings.tres" id="3_xpd0r"]
[ext_resource type="Resource" uid="uid://cppnx2dsyd0xi" path="res://src/singletons/camera/camera_target_transform.tres" id="4_qcnfh"]
[ext_resource type="Resource" uid="uid://dyt784lki51ha" path="res://src/singletons/game_state_manager/game_state_resource.tres" id="5_wjhc2"]
[ext_resource type="PackedScene" uid="uid://5erm75pc5fdd" path="res://src/common/water_detector/water_detector.tscn" id="6_a8h50"]
[ext_resource type="Resource" uid="uid://bnqobjr0yvk17" path="res://src/singletons/camera/camera_water_volume_height.tres" id="6_e34bo"]
[ext_resource type="PackedScene" uid="uid://dxo7bfhp6ojpb" path="res://src/common/transform_resource_manager/transform_resource_manager.tscn" id="7_y3o6a"]
[ext_resource type="Resource" uid="uid://caltt67cj0pty" path="res://src/singletons/time_manager/time_resource_gameplay.tres" id="8_hp22b"]
[ext_resource type="Resource" uid="uid://bvia5fo4gt42c" path="res://src/singletons/camera/camera_transform.tres" id="8_u3pbk"]
[ext_resource type="Script" path="res://src/singletons/camera/camera_shake/camera_shake.gd" id="9_sl8og"]

[node name="Camera" type="Marker3D"]
process_mode = 3
script = ExtResource("1_8vlcf")
thumbstick_resource_right = ExtResource("2_yl0p3")
settings_resource = ExtResource("3_xpd0r")
target_transform_resource = ExtResource("4_qcnfh")
game_state_resource = ExtResource("5_wjhc2")
water_volume_height_resource = ExtResource("6_e34bo")

[node name="YawPivot" type="Marker3D" parent="."]
unique_name_in_owner = true

[node name="PitchPivot" type="Marker3D" parent="YawPivot"]
unique_name_in_owner = true
transform = Transform3D(1, 0, 0, 0, 0.906307, 0.422618, 0, -0.422618, 0.906307, 0, 0, 0)

[node name="RayCast3D" type="RayCast3D" parent="YawPivot/PitchPivot"]
unique_name_in_owner = true
enabled = false
collision_mask = 68

[node name="CameraAnchor" type="Marker3D" parent="YawPivot/PitchPivot"]
unique_name_in_owner = true
transform = Transform3D(1, 0, 0, 0, 1, 2.98023e-08, 0, -2.98023e-08, 1, 0, 0, 5.5)

[node name="CameraTransform" type="Marker3D" parent="YawPivot/PitchPivot/CameraAnchor"]
unique_name_in_owner = true

[node name="CameraShake" type="Node3D" parent="YawPivot/PitchPivot/CameraAnchor/CameraTransform"]
script = ExtResource("9_sl8og")
settings_resource = ExtResource("3_xpd0r")
time_resource_gameplay = ExtResource("8_hp22b")

[node name="Camera3D" type="Camera3D" parent="YawPivot/PitchPivot/CameraAnchor/CameraTransform/CameraShake"]
unique_name_in_owner = true
current = true

[node name="WaterDetector" parent="YawPivot/PitchPivot/CameraAnchor/CameraTransform" instance=ExtResource("6_a8h50")]
unique_name_in_owner = true

[node name="TransformResourceManager" parent="YawPivot/PitchPivot/CameraAnchor/CameraTransform" instance=ExtResource("7_y3o6a")]
transform_resource = ExtResource("8_u3pbk")
